--- a/src/sass/components/_pagination.scss
+++ b/src/sass/components/_pagination.scss
@@ -1,10 +1,6 @@
 .pagination {
   &-container {
-    // mixins
-    // display: flex;
-    // justify-content: center;
     @include flex(center);
-    // margin: 0 auto;
     margin-top: 50px;
   }
 
@@ -13,12 +9,9 @@
     height: 40px;
     padding: 0 10px;
     min-width: 200px;
-    // position: relative;
   }
   &-button {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    @include flex(center, center);
     text-align: center;
     border-radius: 5px;
     border: none;
@@ -47,37 +40,23 @@
     background-color: $accent-color;
     color: $secondary-color;
     font-size: 16px;
+    &:focus {
+      border: 2px solid #0000004d;
+    }
   }
 }
-
 .arrow-btn {
   width: 40px;
   height: 40px;
-  font-size: 30px;
+  font-size: 20px;
   background-color: $secondary-bg-color;
   border-radius: 5px;
   border: none;
   outline: none;
-}
-.arrow-btn:hover {
-  background-color: $accent-color;
-  color: $secondary-color;
-}
-.arrow-btn:focus {
-  border: 1px solid #0000004d;
-}
-.arrow-btn:active {
-  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.562);
-}
-.pagination-item {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  border: none;
-  outline: none;
 
   &:hover {
+    transition-duration: 500ms;
+    font-size: 25px;
     background-color: $accent-color;
     color: $secondary-color;
   }
