--- a/src/sass/components/_filmInfo.scss
+++ b/src/sass/components/_filmInfo.scss
@@ -74,10 +74,10 @@
   }
 
   &__img {
-    width: 100%;
-    height: 356px;
+    width: 396;
+    // height: 356px;
     margin-bottom: 30px;
-    // mixins
+
     @include tablet {
       width: 264px;
       height: 374px;
