--- a/src/templates/header-main.hbs
+++ b/src/templates/header-main.hbs
@@ -33,7 +33,7 @@
             <div class="header-list-nav">
                 <ul class="list-nav">
                     <li class="list-nav-item">
-                        <a class="list-item-link active" href='/'>Home</a>
+                        <a class="list-item-link active" href='/home'>Home</a>
                     </li>
                     <li class="list-nav-item">
                         <a class="list-item-link" href='/my-library'>My Library</a>
