--- a/src/sass/components/_filmInfo.scss
+++ b/src/sass/components/_filmInfo.scss
@@ -26,10 +26,12 @@
       background-color: $secondary-bg-color;
       border-radius: 5px;
     }
-    // &__characteristic {
-    //   display: flex;
-    // }
+
+    &__box-card {
+      margin-left: 32px;
+    }
   }
+
   &-about__title {
     margin-top: 20px;
     margin-bottom: 10px;
@@ -67,17 +69,18 @@
       margin-right: 10px;
     }
   }
+
   &__img {
     width: 100%;
     height: 356px;
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
     @include tablet {
       width: 264px;
       height: 374px;
       margin-right: 32px;
     }
     @include desktop {
-      width: 396px;
+      width: 350px;
       height: 478px;
       margin-right: 30px;
     }
