--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -30,7 +30,14 @@
     visibility: hidden;
     pointer-events: none;
     transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    min-width: 280px;
+    max-width: 280px;
+
+    @include tablet {
+      max-width: 618px;
+    }
+    @include desktop {
+      max-width: 882px;
+    }
   }
 
   &-content {
