--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -16,7 +16,7 @@
   visibility: visible;
   opacity: 1;
   pointer-events: auto;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal {
   &__body {
