--- a/src/sass/components/_modalSudents.scss
+++ b/src/sass/components/_modalSudents.scss
@@ -1,11 +1,14 @@
 .team-card-list {
+  // position: fixed;
   &-item {
     margin-bottom: 30px;
+    height: 100%;
 
     &-img {
       width: 100%;
-      height: 250px;
+      height: 70%;
       border-radius: 10px;
+      margin-bottom: 20px;
     }
   }
 }
@@ -43,12 +46,12 @@
   border-radius: 10px;
 }
 
-@media screen and (max-width: 479px) {
+@media screen and (max-width: 767px) {
   .team-card-list-item:not(:last-child) {
     margin-bottom: 30px;
   }
 }
-@media screen and (min-width: 480px) {
+@media screen and (min-width: 768px) {
   .team-card-list {
     height: 100%;
     margin-left: -30px;
