--- a/src/sass/components/_buttons.scss
+++ b/src/sass/components/_buttons.scss
@@ -44,7 +44,9 @@
   background-color: $accent-color;
   border-color: $accent-color;
 }
-
+.is-active {
+  background-color: $accent-color;
+}
 @media screen and (min-width: 768) and (min-width: 1200px) {
   .button {
     width: 136px;
