--- a/src/sass/components/_modalSudents.scss
+++ b/src/sass/components/_modalSudents.scss
@@ -1,91 +1,61 @@
-.team-card-list {
-  &-item {
-    height: 80%;
-
-    &-img {
-      width: 100%;
-      height: 65%;
-      border-radius: 10px;
-      margin-bottom: 20px;
-    }
-  }
+@import url(//fonts.googleapis.com/css?family=Montserrat:300,400,500);
+.team3 {
+  font-family: 'Montserrat', sans-serif;
+  color: #8d97ad;
+  font-weight: 300;
 }
 
-.student-name {
-  font-size: 16px;
-  margin-bottom: 5px;
+.team3 h1,
+.team3 h2,
+.team3 h3,
+.team3 h4,
+.team3 h5,
+.team3 h6 {
+  color: #3e4555;
 }
 
-.student-development {
-  margin-bottom: 10px;
-  font-weight: bold;
-  font-size: 16px;
+.team3 .font-weight-medium {
+  font-weight: 500;
 }
 
-.student-email {
-  display: block;
-  margin-bottom: 5px;
-  cursor: pointer;
-  font-size: 14px;
-  color: teal;
+.team3 .bg-light {
+  background-color: #f4f8fa !important;
 }
 
-.student-github {
-  display: block;
-  font-size: 14px;
-  cursor: pointer;
-  color: teal;
+.team3 .subtitle {
+  color: #8d97ad;
+  line-height: 24px;
+  font-size: 13px;
 }
 
-.team-card-list-item {
-  text-align: center;
-  box-shadow: 5px 5px 5px 0px rgba(5, 41, 69, 0.75);
-  -webkit-box-shadow: 5px 5px 5px 0px rgba(5, 41, 69, 0.75);
-  -moz-box-shadow: 5px 5px 5px 0px rgba(5, 41, 69, 0.75);
-
-  &:hover,
-  &:focus {
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transform: translate(-5px, -5px);
-    transition: transform 500ms linear;
-    box-shadow: 10px 10px 10px 2px rgba(5, 41, 69, 0.75);
-    -webkit-box-shadow: 10px 10px 10px 2px rgba(5, 41, 69, 0.75);
-    -moz-box-shadow: 10px 10px 10px 2px rgba(5, 41, 69, 0.75);
-  }
+.team3 ul {
+  margin-top: 30px;
 }
 
-@media screen and (max-width: 767px) {
-  .team-card-list-item:not(:last-child) {
-    margin-bottom: 30px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .team-card-list {
-    // height: 100%;
-    margin-left: -15px;
-    margin-top: -15px;
-    display: flex;
-    flex-wrap: wrap;
-  }
-
-  .team-card-list-item {
-    margin-left: 15px;
-    margin-top: 15px;
-    width: calc((100% - 30px) / 2);
-  }
+.team3 h5 {
+  line-height: 22px;
+  font-size: 18px;
 }
 
-@media screen and (min-width: 1024px) {
-  .team-card-list {
-    margin-left: -15px;
-    margin-top: -15px;
-    display: flex;
-    flex-wrap: wrap;
-  }
+.team3 ul li a {
+  color: #8d97ad;
+  padding-right: 15px;
+  -webkit-transition: 0.1s ease-in;
+  -o-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
 
-  .team-card-list-item {
-    margin-left: 15px;
-    margin-top: 15px;
-    width: calc((100% - 45px) / 3);
-  }
+.team3 ul li a:hover {
+  -webkit-transform: translate3d(0px, -5px, 0px);
+  transform: translate3d(0px, -5px, 0px);
+  color: #316ce8;
+}
+
+.team3 .title {
+  margin: 30px 0 0 0;
+}
+
+.team3 .subtitle {
+  margin: 0 0 20px 0;
+  font-size: 13px;
 }
